# aoc_2024

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/advent/: __init__.py  cli.py  day01.py  day02.py  day03.py  day04.py  main.py  submitter.py
