[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advent"
description = "Advent 2024 in python"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "advent-of-code-data",
  "rich_argparse",
  "numpy",
]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "advent.__version__"}

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pylint",
    "pre-commit",
]

[project.scripts]
"advent" = "advent.cli:cli"

[project.urls]
Homepage = "https://github.com/aaroncapon/aoc_2024"

[tool.pylint.messages_control]
max-line-length = 88
disable = 'wrong-import-position,logging-fstring-interpolation,import-error'

[tool.pylint.SIMILARITIES]
min-similarity-lines = 6
ignore-comments = true
ignore-docstrings = true

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"
